<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">







    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:layout_marginRight="@dimen/margin10"
                android:orientation="vertical">

                <TextView
                    style="@style/NevigationtextViewLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen30"
                    android:layout_marginRight="@dimen/dimen30"
                    android:layout_marginBottom="@dimen/margin10"
                    android:fontFamily="@font/sans_bold"
                    android:text="@string/register"
                    android:textColor="@color/white" />

            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/editTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen30"
                android:layout_marginRight="@dimen/dimen30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/hint"
                app:startIconDrawable="@drawable/person_icon_filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white"
                    android:inputType="textPersonName"
                    android:padding="@dimen/margin10"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/editTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen30"
                android:layout_marginRight="@dimen/dimen30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/email_adress"
                android:textColorHint="@color/hint"
                app:startIconDrawable="@drawable/email_icon_filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextEmail"
                    style="@style/editTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/margin10"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/editTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen30"
                android:layout_marginRight="@dimen/dimen30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/text_password"
                android:textColorHint="@color/hint"
                app:startIconDrawable="@drawable/password_filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextPassword"
                    style="@style/editTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/editTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen30"
                android:layout_marginRight="@dimen/dimen30"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/text_password"
                android:textColorHint="@color/hint"
                app:startIconDrawable="@drawable/password_filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditTextConfirmPassword"
                    style="@style/editTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding"
                    />


            </com.google.android.material.textfield.TextInputLayout>






                <CheckBox
                    android:id="@+id/mShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/dimen30"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password"
                    android:buttonTint="@color/white"
                    android:layout_weight="1"
                    android:textColor="@color/white" />










            <com.google.android.material.button.MaterialButton
                style="@style/NevigationtextViewMedium"
                android:id="@+id/mButtonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen30"
                android:layout_marginStart="@dimen/dimen30"
                android:layout_marginEnd="@dimen/dimen30"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/margin10"
                android:text="@string/register"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                />


            <ProgressBar
                android:id="@+id/mRegisterProgressBar"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen30"
                android:indeterminateBehavior="repeat"
                android:visibility="gone"
                android:layout_marginStart="@dimen/dimen30"
                android:layout_marginEnd="@dimen/dimen30"
                android:progress="10"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                />





            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mLoginLL"
                    style="@style/NevigationtextViewSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/login_text"
                    android:textColor="@color/white" />


            </LinearLayout>




            <!--                <com.google.android.gms.common.SignInButton-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginStart="@dimen/dimen30"-->
            <!--                    android:layout_marginEnd="@dimen/dimen30"-->
            <!--                    android:layout_marginTop="@dimen/margin10"-->
            <!--                    />-->





        </LinearLayout>



    </ScrollView>

</LinearLayout>